gcc/testsuite/gdc.test/compilable/imports/test19609c.d
deprecated(null) module imports.test19609c;
