gcc/testsuite/gdc.test/fail_compilation/imports/fail347a.d
module imports.fail347a;

pure size_t strlen(in char* s);
